--- a/app.css
+++ b/app.css
@@ -8,12 +8,12 @@ body {
   background: lavenderblush;
 }
 
-#container-1 {
+#container2 {
   background-color: lightcyan;
 }
-#container,
-#container-1,
-#container-2 {
+#container1,
+#container2,
+#container3 {
   text-align: center;
   background-attachment: fixed;
   height: 100%;
@@ -25,6 +25,15 @@ body {
     justify-content: center;
     align-items: center;
 }
+#name {
+  margin-top: 28px;
+}
+#datetime {
+  float: right;
+  color:#BABAE6;
+  margin: 0;
+  margin-right: 1%;
+}
 .hireme {
   margin: 0;
  
@@ -32,7 +41,7 @@ body {
 .menu {
   display: inline;
   cursor: pointer;
-padding: 15px;
+  padding: 15px;
 }
 ul {
     background: lavender;
@@ -53,4 +62,19 @@ ul {
   width: 250px;
   border-radius: 50%;
   text-align: center;
+}
+
+.decrement {
+  background:red;
+}
+.increment {
+    background: green;
+
+}
+.increment,
+.decrement {
+  border-radius: 50%;
+  border: none;
+  margin: 5px;
+  color: white;
 }
